@@ -38,6 +38,7 @@ int main(int argc, char** argv)
     << get_defs(CLUTTER_TYPE_BEHAVIOUR_SCALE)
     << get_defs(CLUTTER_TYPE_BIN_LAYOUT)
     << get_defs(CLUTTER_TYPE_BOX)
+    << get_defs(CLUTTER_TYPE_BOX_LAYOUT)
     << get_defs(CLUTTER_TYPE_CAIRO_TEXTURE)
     << get_defs(CLUTTER_TYPE_CHILD_META)
     << get_defs(CLUTTER_TYPE_CLONE)
